infra/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: test-service
  namespace: default
  labels:
    app: test-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-service
  template:
    metadata:
      labels:
        app: test-service
    spec:
      containers:
        - name: test-service
          image: ghcr.io/tokugero/test-service:latest
          imagePullPolicy: Always
