infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-service
  namespace: default
  labels:
    app: test-service
spec:
  selector:
    app: test-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
