infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-service
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx-internal"
spec:
  rules:
    - host: test-service.home.int
      http:
        paths:
          - backend:
              service:
                name: test-service
                port: 
                  number: 80
            path: "/"
            pathType: Prefix
